--- a/frontend/themes/vaadin-crm/styles.css
+++ b/frontend/themes/vaadin-crm/styles.css
@@ -1,5 +1,5 @@
 @import url('./main-layout.css');
 @import url('./views/home-view.css');
-@import url('./views/about-view.css');
+@import url('./views/schema-view.css');
 @import url('lumo-css-framework/all-classes.css');
 @import url('line-awesome/dist/line-awesome/css/line-awesome.min.css');
